target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'&&'", "'||'", "'::'", "'!'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "SL_COMMENT", "ML_COMMENT", "ASSIGNOP", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "MODOP", "EQOP", 
                      "NEOP", "GTOP", "LTOP", "GTEOP", "LTEOP", "ANDOP", 
                      "OROP", "STRINGOP", "NOTOP", "LP", "RP", "LC", "RC", 
                      "LS", "RS", "SEMICOLON", "COMMA", "DOT", "COLON", 
                      "INTLIT", "BOOLLIT", "FLOATLIT", "STRINGLIT", "AUTO", 
                      "BREAK", "BOOLEAN", "CONTINUE", "ELSE", "FLOAT", "FOR", 
                      "FUNCTION", "IF", "INHERIT", "INTEGER", "OUT", "RETURN", 
                      "STRING", "VOID", "WHILE", "TRUE", "FALSE", "DO", 
                      "OF", "ARRAY", "IDENTIFIER", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_declaration = 2
    RULE_typ = 3
    RULE_vardec = 4
    RULE_subvardec = 5
    RULE_expand = 6
    RULE_idlist = 7
    RULE_exprlist = 8
    RULE_subexprlist = 9
    RULE_funcdec = 10
    RULE_emptycurl = 11
    RULE_parameter = 12
    RULE_parameterlist = 13
    RULE_blockstate = 14
    RULE_blockstatemin = 15
    RULE_statement = 16
    RULE_lhs = 17
    RULE_scalarvar = 18
    RULE_assignstate = 19
    RULE_ifstate = 20
    RULE_whilestate = 21
    RULE_dowhilestate = 22
    RULE_forstate = 23
    RULE_breakstate = 24
    RULE_continuestate = 25
    RULE_returnstate = 26
    RULE_funcall = 27
    RULE_arraytype = 28
    RULE_dimensions = 29
    RULE_atomictype = 30
    RULE_literal = 31
    RULE_expr = 32
    RULE_expr1 = 33
    RULE_expr2 = 34
    RULE_expr3 = 35
    RULE_expr4 = 36
    RULE_expr5 = 37
    RULE_expr6 = 38
    RULE_expr7 = 39
    RULE_exprindex = 40
    RULE_arraylit = 41

    ruleNames =  [ "program", "decllist", "declaration", "typ", "vardec", 
                   "subvardec", "expand", "idlist", "exprlist", "subexprlist", 
                   "funcdec", "emptycurl", "parameter", "parameterlist", 
                   "blockstate", "blockstatemin", "statement", "lhs", "scalarvar", 
                   "assignstate", "ifstate", "whilestate", "dowhilestate", 
                   "forstate", "breakstate", "continuestate", "returnstate", 
                   "funcall", "arraytype", "dimensions", "atomictype", "literal", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "exprindex", "arraylit" ]

    EOF = Token.EOF
    SL_COMMENT=1
    ML_COMMENT=2
    ASSIGNOP=3
    ADDOP=4
    SUBOP=5
    MULOP=6
    DIVOP=7
    MODOP=8
    EQOP=9
    NEOP=10
    GTOP=11
    LTOP=12
    GTEOP=13
    LTEOP=14
    ANDOP=15
    OROP=16
    STRINGOP=17
    NOTOP=18
    LP=19
    RP=20
    LC=21
    RC=22
    LS=23
    RS=24
    SEMICOLON=25
    COMMA=26
    DOT=27
    COLON=28
    INTLIT=29
    BOOLLIT=30
    FLOATLIT=31
    STRINGLIT=32
    AUTO=33
    BREAK=34
    BOOLEAN=35
    CONTINUE=36
    ELSE=37
    FLOAT=38
    FOR=39
    FUNCTION=40
    IF=41
    INHERIT=42
    INTEGER=43
    OUT=44
    RETURN=45
    STRING=46
    VOID=47
    WHILE=48
    TRUE=49
    FALSE=50
    DO=51
    OF=52
    ARRAY=53
    IDENTIFIER=54
    WS=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.decllist()
            self.state = 85
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.declaration()
                self.state = 88
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(MT22Parser.VardecContext,0)


        def funcdec(self):
            return self.getTypedRuleContext(MT22Parser.FuncdecContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.vardec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.funcdec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomictype(self):
            return self.getTypedRuleContext(MT22Parser.AtomictypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typ)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.atomictype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.arraytype()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def subvardec(self):
            return self.getTypedRuleContext(MT22Parser.SubvardecContext,0)


        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardec" ):
                return visitor.visitVardec(self)
            else:
                return visitor.visitChildren(self)




    def vardec(self):

        localctx = MT22Parser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 102
                self.idlist()
                self.state = 103
                self.match(MT22Parser.COLON)
                self.state = 104
                self.typ()
                pass

            elif la_ == 2:
                self.state = 106
                self.subvardec()
                pass


            self.state = 109
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubvardecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def subvardec(self):
            return self.getTypedRuleContext(MT22Parser.SubvardecContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def expand(self):
            return self.getTypedRuleContext(MT22Parser.ExpandContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_subvardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubvardec" ):
                return visitor.visitSubvardec(self)
            else:
                return visitor.visitChildren(self)




    def subvardec(self):

        localctx = MT22Parser.SubvardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subvardec)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(MT22Parser.IDENTIFIER)
                self.state = 112
                self.match(MT22Parser.COMMA)
                self.state = 113
                self.subvardec()
                self.state = 114
                self.match(MT22Parser.COMMA)
                self.state = 115
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.expand()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def ASSIGNOP(self):
            return self.getToken(MT22Parser.ASSIGNOP, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_expand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpand" ):
                return visitor.visitExpand(self)
            else:
                return visitor.visitChildren(self)




    def expand(self):

        localctx = MT22Parser.ExpandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(MT22Parser.IDENTIFIER)
            self.state = 121
            self.match(MT22Parser.COLON)
            self.state = 122
            self.typ()
            self.state = 123
            self.match(MT22Parser.ASSIGNOP)
            self.state = 124
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(MT22Parser.IDENTIFIER)
                self.state = 127
                self.match(MT22Parser.COMMA)
                self.state = 128
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexprlist(self):
            return self.getTypedRuleContext(MT22Parser.SubexprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MT22Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprlist)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.SUBOP, MT22Parser.NOTOP, MT22Parser.LP, MT22Parser.LC, MT22Parser.INTLIT, MT22Parser.BOOLLIT, MT22Parser.FLOATLIT, MT22Parser.STRINGLIT, MT22Parser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.subexprlist()
                pass
            elif token in [MT22Parser.RP, MT22Parser.RC]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubexprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def subexprlist(self):
            return self.getTypedRuleContext(MT22Parser.SubexprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_subexprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubexprlist" ):
                return visitor.visitSubexprlist(self)
            else:
                return visitor.visitChildren(self)




    def subexprlist(self):

        localctx = MT22Parser.SubexprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_subexprlist)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.expr()
                self.state = 137
                self.match(MT22Parser.COMMA)
                self.state = 138
                self.subexprlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def parameterlist(self):
            return self.getTypedRuleContext(MT22Parser.ParameterlistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def blockstate(self):
            return self.getTypedRuleContext(MT22Parser.BlockstateContext,0)


        def emptycurl(self):
            return self.getTypedRuleContext(MT22Parser.EmptycurlContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdec" ):
                return visitor.visitFuncdec(self)
            else:
                return visitor.visitChildren(self)




    def funcdec(self):

        localctx = MT22Parser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcdec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(MT22Parser.IDENTIFIER)
            self.state = 144
            self.match(MT22Parser.COLON)
            self.state = 145
            self.match(MT22Parser.FUNCTION)
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY]:
                self.state = 146
                self.typ()
                pass
            elif token in [MT22Parser.VOID]:
                self.state = 147
                self.match(MT22Parser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 150
            self.match(MT22Parser.LP)
            self.state = 151
            self.parameterlist()
            self.state = 152
            self.match(MT22Parser.RP)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 153
                self.match(MT22Parser.INHERIT)
                self.state = 154
                self.match(MT22Parser.IDENTIFIER)


            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 157
                self.blockstate()
                pass

            elif la_ == 2:
                self.state = 158
                self.emptycurl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmptycurlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LC(self):
            return self.getToken(MT22Parser.LC, 0)

        def RC(self):
            return self.getToken(MT22Parser.RC, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_emptycurl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptycurl" ):
                return visitor.visitEmptycurl(self)
            else:
                return visitor.visitChildren(self)




    def emptycurl(self):

        localctx = MT22Parser.EmptycurlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_emptycurl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(MT22Parser.LC)
            self.state = 162
            self.match(MT22Parser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 164
                self.match(MT22Parser.INHERIT)

